--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
-    
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-handlebars": "^7.0.7"
   }
 }
